[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/Player/Player-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://GUI/Fonts/Orbitron-VariableFont_wght.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Player/PlayerStateMachine.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 3.5 )

[sub_resource type="Animation" id=14]
resource_name = "AirKick"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 23, 24, 25, 26 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Crouch"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="Animation" id=18]
resource_name = "Dash"

[sub_resource type="Animation" id=3]
resource_name = "Death"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 17, 18 ]
}

[sub_resource type="Animation" id=4]
resource_name = "DoubleJump"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Fall"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=6]
resource_name = "GetUp"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 12, 13 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Idle"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Jump"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Kick"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22 ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "Run"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 3 ]
}

[sub_resource type="Animation" id=12]
resource_name = "Slide"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 11 ]
}

[sub_resource type="Animation" id=13]
resource_name = "Stealth"
length = 0.45
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16 ]
}

[sub_resource type="Animation" id=15]
resource_name = "WallSlide"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 27 ]
}

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 6, 3.5 )

[sub_resource type="DynamicFont" id=17]
size = 64
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 28

[node name="pAnimation" type="AnimationPlayer" parent="."]
anims/AirKick = SubResource( 14 )
anims/Crouch = SubResource( 2 )
anims/Dash = SubResource( 18 )
anims/Death = SubResource( 3 )
anims/DoubleJump = SubResource( 4 )
anims/Fall = SubResource( 5 )
anims/GetUp = SubResource( 6 )
anims/Idle = SubResource( 7 )
anims/Jump = SubResource( 8 )
anims/Kick = SubResource( 9 )
anims/RESET = SubResource( 10 )
anims/Run = SubResource( 11 )
anims/Slide = SubResource( 12 )
anims/Stealth = SubResource( 13 )
anims/WallSlide = SubResource( 15 )

[node name="CrouchCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2.5 )
shape = SubResource( 16 )

[node name="Up1" type="RayCast2D" parent="."]
position = Vector2( 6, 2 )
enabled = true
cast_to = Vector2( 0, -8.5 )

[node name="Up2" type="RayCast2D" parent="."]
position = Vector2( -6, 2 )
enabled = true
cast_to = Vector2( 0, -8.5 )

[node name="Right" type="RayCast2D" parent="."]
position = Vector2( 5, 1 )
enabled = true
cast_to = Vector2( 2, 0 )

[node name="Right2" type="RayCast2D" parent="."]
position = Vector2( 5, 7 )
enabled = true
cast_to = Vector2( 2, 0 )

[node name="Left" type="RayCast2D" parent="."]
position = Vector2( -5, 1 )
enabled = true
cast_to = Vector2( -2, 0 )

[node name="Left2" type="RayCast2D" parent="."]
position = Vector2( -5, 7 )
enabled = true
cast_to = Vector2( -2, 0 )

[node name="Label" type="Label" parent="."]
margin_left = -17.0
margin_top = -15.0
margin_right = 392.0
margin_bottom = 66.0
rect_scale = Vector2( 0.08807, 0.100202 )
custom_fonts/font = SubResource( 17 )
text = "state"
align = 1

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Dashtimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="wSlideTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="animation_finished" from="pAnimation" to="." method="_on_pAnimation_animation_finished"]
[connection signal="timeout" from="Dashtimer" to="." method="_on_Dashtimer_timeout"]
[connection signal="timeout" from="wSlideTimer" to="." method="_on_wSlideTimer_timeout"]
